--- a/src/components/button/style.scss
+++ b/src/components/button/style.scss
@@ -18,8 +18,10 @@
     align-items: center;
     text-decoration: none;
     color: #fff;
+    background: none;
     font-family: "Handlee";
     border: none;
+    font-size: 3vw;
     &:hover {
       color: rgb(123, 118, 118);
     }
